# otus

./: .gitignore  LICENSE  README.md  requirements-dev.txt  requirements.txt
.github/workflows/: hm10_test.yml
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_03/api/: items.py
homework_03/api/users/: crud.py  schemas.py
homework_04/: config.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_05/views/: about.py  index.py
homework_06/: docker-compose.yaml
homework_06/app/: app.py  main.py
homework_06/app/migrations/versions/: 2749f29faccd_create_posts_table.py
homework_06/app/models/: __init__.py  post.py
homework_06/app/templates/: base.html
homework_06/app/templates/posts/: add.html  details.html  list.html
homework_06/app/views/: posts.py
homework_06/app/views/forms/: posts.py
homework_07/: requirements.txt
homework_07/shop/pokupka/: apps.py
homework_07/shop/pokupka/migrations/: 0001_initial.py
homework_07/shop/shop/: settings.py
homework_08/shop/pokupka/: views.py
homework_08/shop/shop/: settings.py  urls.py
homework_08/shop/templates/: root.html
homework_09/shop/pokupka/: models.py  test_views.py  tests.py  views.py
homework_10/: requirements.txt
homework_10/shop/pokupka/: apps.py  models.py  test_views.py  tests.py  views.py
homework_10/shop/pokupka/migrations/: 0001_initial.py
homework_10/shop/shop/: settings.py  urls.py
(+6 files in other folders)
